@@ -26,10 +26,10 @@ import org.robolectric.ParameterizedRobolectricTestRunner.Parameter;
 import org.robolectric.ParameterizedRobolectricTestRunner.Parameters;
 
 import org.chromium.base.Callback;
-import org.chromium.base.FeatureOverrides;
 import org.chromium.base.Promise;
 import org.chromium.base.TimeUtils;
 import org.chromium.base.test.BaseRobolectricTestRule;
+import org.chromium.base.test.BaseRobolectricTestRunner;
 import org.chromium.base.test.util.Batch;
 import org.chromium.base.test.util.Features;
 import org.chromium.chrome.browser.flags.ChromeFeatureList;
@@ -39,13 +39,10 @@ import org.chromium.chrome.browser.preferences.Pref;
 import org.chromium.components.prefs.PrefService;
 import org.chromium.components.signin.AccountManagerFacade;
 import org.chromium.components.signin.AccountManagerFacadeProvider;
-import org.chromium.components.signin.base.AccountInfo;
-import org.chromium.components.signin.test.util.TestAccounts;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 /** Unit tests for SafetyHubPasswordsFetchService. */
 @RunWith(Enclosed.class)
@@ -60,15 +57,9 @@ public class SafetyHubPasswordsFetchServiceTest {
         private static final String TEST_EMAIL_ADDRESS = "test@email.com";
 
         /** Returns all possible combinations for test parameterization. */
-        @Parameters(name = "{0}, {1}")
-        public static Collection<Object[]> data() {
-            Collection<Object[]> data = new ArrayList<>();
-            for (boolean hasAccount : List.of(true, false)) {
-                for (boolean isLoginDbDeprecationEnabled : List.of(true, false)) {
-                    data.add(new Object[] {hasAccount, isLoginDbDeprecationEnabled});
-                }
-            }
-            return data;
+        @Parameters
+        public static Collection<Object> data() {
+            return Arrays.asList(new Object[] {true, false});
         }
 
         @Rule(order = -2)
@@ -81,9 +72,6 @@ public class SafetyHubPasswordsFetchServiceTest {
         @Parameter(0)
         public boolean hasAccount;
 
-        @Parameter(1)
-        public boolean mIsLoginDbDeprecationEnabled;
-
         private PrefService mPrefService;
         private FakePasswordCheckupClientHelper mPasswordCheckupClientHelper;
         private PasswordManagerHelper mPasswordManagerHelper;
@@ -92,12 +80,6 @@ public class SafetyHubPasswordsFetchServiceTest {
         public void setUp() {
             // Needed because of BaseRobolectricTestRule.
             MockitoAnnotations.openMocks(this);
-
-            if (mIsLoginDbDeprecationEnabled) {
-                FeatureOverrides.enable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
-            } else {
-                FeatureOverrides.disable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
-            }
 
             mPrefService = mSafetyHubTestRule.getPrefService();
             mPasswordCheckupClientHelper = mSafetyHubTestRule.getPasswordCheckupClientHelper();
@@ -123,9 +105,19 @@ public class SafetyHubPasswordsFetchServiceTest {
             return hasAccount ? Pref.REUSED_CREDENTIALS_COUNT : Pref.LOCAL_REUSED_CREDENTIALS_COUNT;
         }
 
+        private String getLastCheckTimePreference() {
+            return hasAccount
+                    ? Pref.LAST_TIME_IN_MS_ACCOUNT_PASSWORD_CHECK_COMPLETED
+                    : Pref.LAST_TIME_IN_MS_LOCAL_PASSWORD_CHECK_COMPLETED;
+        }
+
+        private void mockLastCheckTime(long timeInMs) {
+            doReturn(timeInMs).when(mPrefService).getLong(getLastCheckTimePreference());
+        }
+
         @Test
         public void noPreferencesUpdated_whenUPMDisabled() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(false, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(false);
 
             new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
                     .fetchPasswordsCount(mTaskFinishedCallback);
@@ -138,7 +130,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenFetchFails() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
             mPasswordCheckupClientHelper.setError(new Exception());
 
             new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
@@ -152,7 +144,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void somePreferencesUpdated_fetchFailsForOneCredentialType() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
             mPasswordCheckupClientHelper.setWeakCredentialsError(new Exception());
             int breachedCredentialsCount = 5;
             int reusedCredentialsCount = 3;
@@ -172,7 +164,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void preferencesUpdated_whenFetchSucceeds() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
             int breachedCredentialsCount = 5;
             int weakCredentialsCount = 4;
             int reusedCredentialsCount = 3;
@@ -190,25 +182,106 @@ public class SafetyHubPasswordsFetchServiceTest {
                     .setInteger(getReusedPreference(), reusedCredentialsCount);
             verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred */ false));
         }
+
+        @Test
+        public void noPreferencesUpdated_whenCheckupFails_lastCheckRecently() {
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
+
+            long twoHoursInMs = 120 * TimeUtils.MILLISECONDS_PER_MINUTE;
+            mockLastCheckTime(TimeUtils.currentTimeMillis() - twoHoursInMs);
+            mPasswordCheckupClientHelper.setError(new Exception());
+
+            new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
+                    .runPasswordCheckup(mTaskFinishedCallback);
+
+            verify(mPrefService, never()).clearPref(eq(getBreachedPreference()));
+            verify(mPrefService, never()).clearPref(eq(getWeakPreference()));
+            verify(mPrefService, never()).clearPref(eq(getReusedPreference()));
+
+            verify(mPrefService, never()).setInteger(eq(getBreachedPreference()), anyInt());
+            verify(mPrefService, never()).setInteger(eq(getWeakPreference()), anyInt());
+            verify(mPrefService, never()).setInteger(eq(getReusedPreference()), anyInt());
+
+            verify(mPrefService, never()).setLong(eq(getLastCheckTimePreference()), anyLong());
+            verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred= */ true));
+        }
+
+        @Test
+        public void noPreferencesUpdated_whenCheckupFails_lastCheckLongAgo() {
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
+
+            long twoDaysInMs = 2 * TimeUtils.MILLISECONDS_PER_DAY;
+            mockLastCheckTime(TimeUtils.currentTimeMillis() - twoDaysInMs);
+            mPasswordCheckupClientHelper.setError(new Exception());
+
+            new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
+                    .runPasswordCheckup(mTaskFinishedCallback);
+
+            verify(mPrefService, times(1)).clearPref(getBreachedPreference());
+            verify(mPrefService, times(1)).clearPref(getWeakPreference());
+            verify(mPrefService, times(1)).clearPref(getReusedPreference());
+
+            verify(mPrefService, never()).setInteger(eq(getBreachedPreference()), anyInt());
+            verify(mPrefService, never()).setInteger(eq(getWeakPreference()), anyInt());
+            verify(mPrefService, never()).setInteger(eq(getReusedPreference()), anyInt());
+
+            verify(mPrefService, never()).setLong(eq(getLastCheckTimePreference()), anyLong());
+            verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred= */ true));
+        }
+
+        @Test
+        public void preferencesUpdated_whenCheckupSucceeds() {
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
+            int breachedCredentialsCount = 5;
+            int weakCredentialsCount = 4;
+            int reusedCredentialsCount = 3;
+            mPasswordCheckupClientHelper.setBreachedCredentialsCount(breachedCredentialsCount);
+            mPasswordCheckupClientHelper.setWeakCredentialsCount(weakCredentialsCount);
+            mPasswordCheckupClientHelper.setReusedCredentialsCount(reusedCredentialsCount);
+
+            long twoDaysInMs = 2 * TimeUtils.MILLISECONDS_PER_DAY;
+            mockLastCheckTime(TimeUtils.currentTimeMillis() - twoDaysInMs);
+
+            assertTrue(
+                    new SafetyHubPasswordsFetchService(
+                                    mPasswordManagerHelper, mPrefService, getAccount())
+                            .runPasswordCheckup(mTaskFinishedCallback));
+
+            verify(mPrefService, times(1))
+                    .setInteger(getBreachedPreference(), breachedCredentialsCount);
+            verify(mPrefService, times(1)).setInteger(getWeakPreference(), weakCredentialsCount);
+            verify(mPrefService, times(1))
+                    .setInteger(getReusedPreference(), reusedCredentialsCount);
+            verify(mPrefService, times(1)).setLong(eq(getLastCheckTimePreference()), anyLong());
+            verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred= */ false));
+        }
+
+        @Test
+        public void noPreferencesUpdated_whenWithinCoolDownPeriod() {
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
+
+            mockLastCheckTime(TimeUtils.currentTimeMillis());
+
+            assertFalse(
+                    new SafetyHubPasswordsFetchService(
+                                    mPasswordManagerHelper, mPrefService, getAccount())
+                            .runPasswordCheckup(mTaskFinishedCallback));
+
+            verify(mPrefService, never()).setInteger(eq(getBreachedPreference()), anyInt());
+            verify(mPrefService, never()).setInteger(eq(getWeakPreference()), anyInt());
+            verify(mPrefService, never()).setInteger(eq(getReusedPreference()), anyInt());
+            verify(mPrefService, never()).setLong(eq(getLastCheckTimePreference()), anyLong());
+            verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred= */ false));
+        }
     }
 
-    @RunWith(ParameterizedRobolectricTestRunner.class)
+    @RunWith(BaseRobolectricTestRunner.class)
     @Batch(Batch.UNIT_TESTS)
     @Features.EnableFeatures({
         ChromeFeatureList.SAFETY_HUB,
         ChromeFeatureList.SAFETY_HUB_WEAK_AND_REUSED_PASSWORDS
     })
     public static class SafetyHubPasswordsFetchServiceSingleTests {
-        @Parameters
-        public static Collection<Object> data() {
-            return Arrays.asList(new Object[] {true, false});
-        }
-
-        @Parameter public boolean mIsLoginDbDeprecationEnabled;
-
-        @Rule(order = -2)
-        public BaseRobolectricTestRule mBaseRule = new BaseRobolectricTestRule();
-
         @Rule public SafetyHubTestRule mSafetyHubTestRule = new SafetyHubTestRule();
 
         @Mock private Callback<Boolean> mTaskFinishedCallback;
@@ -222,18 +295,13 @@ public class SafetyHubPasswordsFetchServiceTest {
         public void setUp() {
             MockitoAnnotations.openMocks(this);
 
-            if (mIsLoginDbDeprecationEnabled) {
-                FeatureOverrides.enable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
-            } else {
-                FeatureOverrides.disable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
-            }
-
             mPrefService = mSafetyHubTestRule.getPrefService();
             mPasswordCheckupClientHelper = mSafetyHubTestRule.getPasswordCheckupClientHelper();
             mPasswordManagerHelper =
                     PasswordManagerHelper.getForProfile(mSafetyHubTestRule.getProfile());
             mockLastCheckTime(0);
-            mockAccountsOnDevice(/* hasAccounts= */ true);
+            doReturn(Promise.fulfilled(new ArrayList<>())).when(mMockFacade).getAccounts();
+            doReturn(true).when(mMockFacade).didAccountFetchSucceed();
 
             AccountManagerFacadeProvider.setInstanceForTests(mMockFacade);
         }
@@ -244,120 +312,9 @@ public class SafetyHubPasswordsFetchServiceTest {
                     .getLong(Pref.LAST_TIME_IN_MS_LOCAL_PASSWORD_CHECK_COMPLETED);
         }
 
-        private void mockAccountsOnDevice(boolean hasAccounts) {
-            List<AccountInfo> accountInfos = new ArrayList<>();
-            if (hasAccounts) {
-                accountInfos.add(TestAccounts.ACCOUNT1);
-            }
-            doReturn(Promise.fulfilled(accountInfos)).when(mMockFacade).getAccounts();
-            doReturn(true).when(mMockFacade).didAccountFetchSucceed();
-        }
-
-        @Test
-        public void noPreferencesUpdated_whenCheckupFails_lastCheckRecently() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
-
-            long twoHoursInMs = 120 * TimeUtils.MILLISECONDS_PER_MINUTE;
-            mockLastCheckTime(TimeUtils.currentTimeMillis() - twoHoursInMs);
-            mPasswordCheckupClientHelper.setError(new Exception());
-
-            new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, null)
-                    .runPasswordCheckup(mTaskFinishedCallback);
-
-            verify(mPrefService, never()).clearPref(eq(Pref.LOCAL_BREACHED_CREDENTIALS_COUNT));
-            verify(mPrefService, never()).clearPref(eq(Pref.LOCAL_WEAK_CREDENTIALS_COUNT));
-            verify(mPrefService, never()).clearPref(eq(Pref.LOCAL_REUSED_CREDENTIALS_COUNT));
-
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_BREACHED_CREDENTIALS_COUNT), anyInt());
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_WEAK_CREDENTIALS_COUNT), anyInt());
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_REUSED_CREDENTIALS_COUNT), anyInt());
-
-            verify(mPrefService, never())
-                    .setLong(eq(Pref.LAST_TIME_IN_MS_LOCAL_PASSWORD_CHECK_COMPLETED), anyLong());
-            verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred= */ true));
-        }
-
-        @Test
-        public void noPreferencesUpdated_whenCheckupFails_lastCheckLongAgo() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
-
-            long twoDaysInMs = 2 * TimeUtils.MILLISECONDS_PER_DAY;
-            mockLastCheckTime(TimeUtils.currentTimeMillis() - twoDaysInMs);
-            mPasswordCheckupClientHelper.setError(new Exception());
-
-            new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, null)
-                    .runPasswordCheckup(mTaskFinishedCallback);
-
-            verify(mPrefService, times(1)).clearPref(Pref.LOCAL_BREACHED_CREDENTIALS_COUNT);
-            verify(mPrefService, times(1)).clearPref(Pref.LOCAL_WEAK_CREDENTIALS_COUNT);
-            verify(mPrefService, times(1)).clearPref(Pref.LOCAL_REUSED_CREDENTIALS_COUNT);
-
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_BREACHED_CREDENTIALS_COUNT), anyInt());
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_WEAK_CREDENTIALS_COUNT), anyInt());
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_REUSED_CREDENTIALS_COUNT), anyInt());
-
-            verify(mPrefService, never())
-                    .setLong(eq(Pref.LAST_TIME_IN_MS_LOCAL_PASSWORD_CHECK_COMPLETED), anyLong());
-            verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred= */ true));
-        }
-
-        @Test
-        public void preferencesUpdated_whenCheckupSucceeds() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
-            int breachedCredentialsCount = 5;
-            int weakCredentialsCount = 4;
-            int reusedCredentialsCount = 3;
-            mPasswordCheckupClientHelper.setBreachedCredentialsCount(breachedCredentialsCount);
-            mPasswordCheckupClientHelper.setWeakCredentialsCount(weakCredentialsCount);
-            mPasswordCheckupClientHelper.setReusedCredentialsCount(reusedCredentialsCount);
-
-            assertTrue(
-                    new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, null)
-                            .runPasswordCheckup(mTaskFinishedCallback));
-
-            verify(mPrefService, times(1))
-                    .setInteger(Pref.LOCAL_BREACHED_CREDENTIALS_COUNT, breachedCredentialsCount);
-            verify(mPrefService, times(1))
-                    .setInteger(Pref.LOCAL_WEAK_CREDENTIALS_COUNT, weakCredentialsCount);
-            verify(mPrefService, times(1))
-                    .setInteger(Pref.LOCAL_REUSED_CREDENTIALS_COUNT, reusedCredentialsCount);
-            verify(mPrefService, times(1))
-                    .setLong(eq(Pref.LAST_TIME_IN_MS_LOCAL_PASSWORD_CHECK_COMPLETED), anyLong());
-            verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred= */ false));
-        }
-
-        @Test
-        public void noPreferencesUpdated_whenWithinCoolDownPeriod() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
-
-            mockLastCheckTime(TimeUtils.currentTimeMillis());
-
-            assertFalse(
-                    new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, null)
-                            .runPasswordCheckup(mTaskFinishedCallback));
-
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_BREACHED_CREDENTIALS_COUNT), anyInt());
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_WEAK_CREDENTIALS_COUNT), anyInt());
-            verify(mPrefService, never())
-                    .setInteger(eq(Pref.LOCAL_REUSED_CREDENTIALS_COUNT), anyInt());
-            verify(mPrefService, never())
-                    .setLong(eq(Pref.LAST_TIME_IN_MS_LOCAL_PASSWORD_CHECK_COMPLETED), anyLong());
-            verify(mTaskFinishedCallback, times(1)).onResult(eq(/* errorOccurred= */ false));
-        }
-
         @Test
         public void noPreferencesUpdated_whenNoAccountsOnDevice_lastCheckRecently() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
-
-            mockAccountsOnDevice(/* hasAccounts= */ false);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
             long twoHoursInMs = 120 * TimeUtils.MILLISECONDS_PER_MINUTE;
             mockLastCheckTime(TimeUtils.currentTimeMillis() - twoHoursInMs);
 
@@ -383,9 +340,8 @@ public class SafetyHubPasswordsFetchServiceTest {
 
         @Test
         public void noPreferencesUpdated_whenNoAccountsOnDevice_lastCheckLongAgo() {
-            mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
+            mSafetyHubTestRule.setPasswordManagerAvailable(true);
 
-            mockAccountsOnDevice(/* hasAccounts= */ false);
             long twoDaysInMs = 2 * TimeUtils.MILLISECONDS_PER_DAY;
             mockLastCheckTime(TimeUtils.currentTimeMillis() - twoDaysInMs);
 
